--- a/HTML-Dasar/index.html
+++ b/HTML-Dasar/index.html
@@ -10,9 +10,22 @@
       font-size: 700;
       text-align: center;
     }
+    p {
+      text-align: justify;
+    }
   </style>
 </head>
 <body>
   <h1>Hello World</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id reprehenderit fuga assumenda accusantium rerum! Non a vero hic aperiam culpa dolore accusamus adipisci et nulla itaque cumque, nihil illum nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet asperiores doloribus et repellendus alias, accusantium, libero ipsum ipsa ab nihil neque excepturi quo nemo sit tempore laudantium, exercitationem nobis? Dolor.
+  Alias et corporis rerum magni sunt minima sequi autem quae, reprehenderit eveniet perferendis accusamus, odit placeat quasi modi tempore qui asperiores. Praesentium voluptates laborum ducimus architecto, reprehenderit enim sit tempora.
+  Reiciendis voluptatibus laboriosam temporibus quisquam itaque aspernatur blanditiis quibusdam? Deserunt, deleniti enim? Eaque perferendis quam harum, qui ullam ad doloribus quasi debitis accusamus iure molestiae quod omnis eligendi odio aliquam.
+  Facilis nostrum neque veniam quis, unde perspiciatis necessitatibus non quisquam tempore nam velit eius ut illo architecto sequi itaque minima ipsum dicta aut ad. Beatae sequi fuga veniam necessitatibus consectetur.
+  Nobis omnis necessitatibus impedit assumenda? Numquam ab qui, id praesentium ipsa ullam suscipit, omnis nihil sunt maiores, et totam culpa iure quo neque officia magni? Repellendus non dignissimos quam doloribus.
+  Dignissimos placeat facere, voluptate asperiores, totam aliquid ea quae dicta debitis, in earum rem ducimus accusantium illum corrupti optio. Quaerat odio rerum veritatis repellat, nulla quos dolore numquam illo facere.
+  Rerum quis, culpa quaerat iste amet quam vero sunt reiciendis adipisci omnis tempora illum nesciunt quo autem earum quas cumque tenetur itaque officia temporibus officiis ullam beatae aspernatur. Est, voluptatum?
+  Neque, deleniti. Ratione rem veniam consequuntur error magni ab repellat mollitia. Excepturi magnam itaque id culpa quasi esse deleniti libero quia, repellat suscipit, officiis deserunt velit unde laudantium quaerat ipsam.
+  Nam, inventore mollitia repellendus eum quod pariatur. Sint fugiat ipsum cumque soluta debitis eveniet rerum, nihil placeat magni a labore totam itaque quasi neque illo assumenda aut fuga quod commodi!
+  Ad earum deleniti dolor, laudantium modi voluptas ab? Iure quasi aliquid ab, explicabo totam obcaecati consequatur illum. Eveniet corrupti perferendis nisi. Debitis unde dolorum totam ab dolore doloremque facilis eos!</p>
 </body>
 </html>
