--- a/3-Bootsrap/index.html
+++ b/3-Bootsrap/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Hello World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Hello World</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis,
+        nemo vitae. Animi itaque dignissimos assumenda exercitationem expedita
+        nobis, soluta pariatur illum, odit, deserunt quas nesciunt vero
+        reprehenderit eveniet aut tempore! Soluta, alias explicabo quibusdam a,
+        neque nihil distinctio laborum qui aliquid accusantium, maxime quae
+        similique error pariatur. Modi animi eaque, ad soluta sed repellat
+        ducimus expedita rem eum debitis necessitatibus. Unde, nulla et. Nulla
+        illo in, amet ea, beatae similique ex corrupti incidunt illum harum
+        cumque laboriosam reprehenderit aperiam doloremque cupiditate. Atque
+        eveniet, nihil facilis reiciendis asperiores consequatur ipsa dolore!
+      </p>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
