--- a/3-Bootsrap/index.html
+++ b/3-Bootsrap/index.html
@@ -15,6 +15,17 @@
   <body>
     <div class="container">
       <h1>Hello World</h1>
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-warning text-white">
+        Secondary
+      </button>
+      <button type="button" class="btn btn-outline-success">Success</button>
+      <button type="button" class="btn btn-info btn-lg">Large button</button>
+      <button type="button" class="btn btn-danger btn-sm">Small button</button>
+      <button type="button" class="btn btn-outline-danger" disabled>
+        Close
+      </button>
+      <input class="btn btn-warning" type="reset" value="Reset" />
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis,
         nemo vitae. Animi itaque dignissimos assumenda exercitationem expedita
@@ -27,6 +38,9 @@
         cumque laboriosam reprehenderit aperiam doloremque cupiditate. Atque
         eveniet, nihil facilis reiciendis asperiores consequatur ipsa dolore!
       </p>
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary" type="button">Button</button>
+      </div>
     </div>
 
     <script
