--- a/3-Bootsrap/index.html
+++ b/3-Bootsrap/index.html
@@ -41,6 +41,21 @@
       <div class="d-grid gap-2">
         <button class="btn btn-primary" type="button">Button</button>
       </div>
+      <h3>
+        Fancy display heading
+        <small class="text-body-secondary">With faded secondary text</small>
+      </h3>
+      <p class="lead">
+        This is a lead paragraph. It stands out from regular paragraphs.
+      </p>
+      <figure class="text-center">
+        <blockquote class="blockquote">
+          <p>A well-known quote, contained in a blockquote element.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          Someone famous in <cite title="Source Title">Source Title</cite>
+        </figcaption>
+      </figure>
     </div>
 
     <script
